Added annotation `@ResponseStatus(HttpStatus.CREATED)` to method `createBook()` of class `BookController`. Added files: `01-create-books-table.yaml` and `db.changelog-master.yaml`. Changed line `spring.jpa.hibernate.ddl-auto=validate` in file `application.properties`. Added field `deleted` to class `Book`. Added method `updateBookById` to class `BookRepository`. Added methods: `deleteById` and `update` to class `BookRepository`. Added methods: `delete` and `updateBook` to class `BookRepository`. Added dependency `liquibase` to file `pom.xml`.